crates/core-executor/src/tests/sql/casting/snapshots/date/query_to_date_cast_explicit_column.snap
---
source: crates/core-executor/src/tests/sql/casting/date.rs
description: "\"SELECT CAST(column1 AS DATE) FROM VALUES ('03-April-2024'), ('2024-04-03'), ('04/03/2024')\""
---
Ok(
    [
        "+------------+",
        "| column1    |",
        "+------------+",
        "| 2024-04-03 |",
        "| 2024-04-03 |",
        "| 2024-04-03 |",
        "+------------+",
    ],
)
